fix(fixing): refactor files having illegal characters